<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_one">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/navigation_setting" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/navigation_notification" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/navigation_help" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/navigation_share" />
            <item
                android:id="@+id/nav_suggest"
                android:icon="@drawable/ic_baseline_contact_mail_24"
                android:title="@string/navigation_suggest" />
            <item
                android:id="@+id/nav_open"
                android:icon="@drawable/ic_baseline_favorite_border_24"
                android:title="@string/navigation_opensource" />
        </menu>
    </item>

</menu>